# TNMT_modern_version

./: README.md  main.py  pyproject.toml
tmnt-beat-em-up/: Dockerfile  project.godot
tmnt-beat-em-up/autoloads/: damage_numbers.gd  game_manager.gd  input_reader.gd
tmnt-beat-em-up/camera/: camera_controller.gd
tmnt-beat-em-up/characters/enemies/: foot_soldier.gd  foot_soldier.tscn
tmnt-beat-em-up/characters/player/: player_controller.gd  player_controller.tscn  player_stats.gd
tmnt-beat-em-up/characters/states/: attack_aerial_state.gd  attack_heavy_state.gd  attack_light_state.gd  dead_state.gd  fall_state.gd  hit_state.gd  idle_state.gd  jump_state.gd  player_state.gd  run_state.gd  state_machine.gd
tmnt-beat-em-up/combat/: combo_controller.gd  hit_box.gd  hurt_box.gd
tmnt-beat-em-up/fx/: hit_particles.gd  screen_shake.gd
tmnt-beat-em-up/resources/: stats_donatello.tres  stats_leonardo.tres  stats_michelangelo.tres  stats_raphael.tres
tmnt-beat-em-up/scenes/: boot.gd  boot.tscn  game_over.tscn  level_01.tscn
tmnt-beat-em-up/scripts/: export.py
tmnt-beat-em-up/ui/: damage_number.gd  hud.tscn  hud_controller.gd
