[project]
name = "tmnt-build-tools"
version = "1.0.0"
description = "Build + export tools for TMNT Beat-em-Up (Godot 4)"
requires-python = ">=3.12"
dependencies = [
"boto3>=1.34",
"rich>=13.7",
"typer>=0.12",
"pydantic>=2.6",
"httpx>=0.27",
"python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
"pytest>=8.1",
"ruff>=0.4",
"mypy>=1.9",
]

[project.scripts]
tmnt-build = "scripts.export:app"
tmnt-test = "scripts.run_tests:app"

[tool.ruff]
line-length = 100
target-version = "py312"

[dependency-groups]
dev = ["pre-commit>=3.7"]

[tool.uv]
package = true

